--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Lab1</string>
+    <string name="app_name">LabVienas</string>
+    <string name="button">Button</string>
 </resources>
