Branch changes: new button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">LabVienas</string>
     <string name="btnChangeTxt">Change text</string>
-    <string name="btnChangeClr">Change colour</string>
+    <string name="btnChangeClr">Change color</string>
+    <string name="btnChangeBack">Change background color</string>
 </resources>
